Add h1 tag, sorting layout, cards layout

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -22,3 +22,12 @@
   font-weight: $fontWeight;
   cursor: pointer;
 }
+
+@mixin grid($grid-type, $params, $row-gap, $column-gap) {
+  @supports (display: grid) {
+    display: grid;
+    #{$grid-type}: #{$params};
+    column-gap: $column-gap;
+    row-gap: $row-gap;;
+  }
+}
