--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -3,9 +3,13 @@ body {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   box-shadow: 0px 3px 6px #00000029;
   background: $lightWhite;
+  z-index: 99;
   nav {
     width: $containerWidth;
     margin: 0 auto;
@@ -18,7 +22,7 @@ header {
       background-image: linear-gradient(120deg, #fed142 30%, #3571a3 100%);
     }
     .nav-links {
-      min-width: 35%;
+      min-width: 40%;
       @include displayFlex(space-between, null);
       li {
         a {
@@ -32,7 +36,7 @@ header {
 
 h1 {
   width: 560px;
-  margin: 3rem auto;
+  margin: 10rem auto 3rem auto;
   text-align: center;
   font-size: 33px;
   font-weight: bold;
@@ -43,7 +47,7 @@ h1 {
 .container {
   width: $containerWidth;
   margin: 0 auto;
-  @include displayFlex(space-between, center);
+  @include displayFlex(space-between);
   .filter {
     width: 20%;
   }
@@ -68,6 +72,88 @@ h1 {
   }
   .filters-wrapper {
     width: 20%;
+    align-self: flex-start;
+    
+    .main-dropdown{
+      position: relative;
+      margin: 5px 0;
+
+      .dropdown {
+        @include displayFlex(space-between);
+        width: 100%;
+        text-align: left;
+        padding: 10px;
+        border: none;
+        background: $primaryColor;
+        color: $lightWhite;
+        border-radius: 5px;
+        cursor: pointer;
+        outline: none;
+      }
+  
+      .dropdown-content {
+        display: none;
+        width: 100%;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        
+        &.dropdown-active {
+          display: block;
+        }
+  
+        form {
+          width: 100%;
+          
+          .child-dropdown {
+            @include displayFlex(flex-start);
+            width: 100%;
+            text-align: left;
+            padding: 10px;
+            border: none;
+            background: $lightWhite;
+            color: $darkBlack;
+            border: 1px solid $lightGray;
+            border-radius: 5px;
+            cursor: pointer;
+            outline: none;
+
+            .second-dropdown {
+              margin-left: 5px;
+              width: 100%;
+              @include displayFlex(space-between);
+            }
+          }
+
+          .child-dropdown-content {
+            @include displayFlex(flex-start, flex-start);
+            flex-direction: column;
+            display: none;
+
+            &.child-dropdown-content-active{
+              display: block;
+            }
+
+            button {
+              width: 100%;
+              text-align: left;
+              background: $darkWhiteColor;
+              padding: 10px;
+              border: none;
+              cursor: pointer;
+
+              &:hover{
+                background: $darkGray;
+                color: $lightWhite;
+              }
+            }
+          }
+        }
+      }
+    }
   }
   .cards-wrapper {
     width: 65%;
