--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,8 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -147,18 +148,29 @@ body {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  box-shadow: 0px 3px 6px #00000029;
+  -webkit-box-shadow: 0px 3px 6px #00000029;
+          box-shadow: 0px 3px 6px #00000029;
   background: #fdfdff;
+  z-index: 99;
 }
 
 header nav {
   width: 85%;
   margin: 0 auto;
   height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 header nav .logo-wrapper {
@@ -169,9 +181,13 @@ header nav .logo-wrapper {
 }
 
 header nav .nav-links {
-  min-width: 35%;
+  min-width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 header nav .nav-links li a {
@@ -181,7 +197,7 @@ header nav .nav-links li a {
 
 h1 {
   width: 560px;
-  margin: 3rem auto;
+  margin: 10rem auto 3rem auto;
   text-align: center;
   font-size: 33px;
   font-weight: bold;
@@ -192,9 +208,15 @@ h1 {
 .container {
   width: 85%;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .container .filter {
@@ -204,9 +226,15 @@ h1 {
 .container .sorting {
   width: 65%;
   margin: 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .container .sorting p {
@@ -235,6 +263,125 @@ h1 {
 
 .container .filters-wrapper {
   width: 20%;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.container .filters-wrapper .main-dropdown {
+  position: relative;
+  margin: 5px 0;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  border: none;
+  background: #3571a3;
+  color: #fdfdff;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content {
+  display: none;
+  width: 100%;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content.dropdown-active {
+  display: block;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form {
+  width: 100%;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  border: none;
+  background: #fdfdff;
+  color: #000000;
+  border: 1px solid #B2B2B2;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown .second-dropdown {
+  margin-left: 5px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: none;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown-content.child-dropdown-content-active {
+  display: block;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown-content button {
+  width: 100%;
+  text-align: left;
+  background: #fbfbfb;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.container .filters-wrapper .main-dropdown .dropdown-content form .child-dropdown-content button:hover {
+  background: #929292;
+  color: #fdfdff;
 }
 
 .container .cards-wrapper {
@@ -243,9 +390,12 @@ h1 {
 
 @supports (display: grid) {
   .container .cards-wrapper {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(3, minmax(32%, 1fr));
-    column-gap: 1rem;
+    -ms-grid-columns: (minmax(32%, 1fr))[3];
+        grid-template-columns: repeat(3, minmax(32%, 1fr));
+    -webkit-column-gap: 1rem;
+            column-gap: 1rem;
     row-gap: 1.3rem;
   }
 }
@@ -254,19 +404,34 @@ h1 {
   background-color: #fdfdff;
   border: 1px solid #707070;
   border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   row-gap: 2rem;
 }
 
 .container .cards-wrapper .card .top-content {
   width: 85%;
   margin: 1rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .container .cards-wrapper .card .top-content h3 {
@@ -277,17 +442,29 @@ h1 {
 .container .cards-wrapper .card .middle-content {
   width: 85%;
   margin: 1rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container .cards-wrapper .card .bottom-content {
   width: 85%;
   margin: 1rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .container .cards-wrapper .card .bottom-content p {
