--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,3 +7,5 @@ $beige: #E5E0E0;
 $lightWhite: #fdfdff;
 $cardsBorderColor: #707070;
 $containerWidth: 85%;
+$lightGray: #B2B2B2;
+$darkGray: #929292;
