--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -73,8 +73,8 @@ h1 {
   .filters-wrapper {
     width: 20%;
     align-self: flex-start;
-    
-    .main-dropdown{
+
+    .main-dropdown {
       position: relative;
       margin: 5px 0;
 
@@ -90,7 +90,7 @@ h1 {
         cursor: pointer;
         outline: none;
       }
-  
+
       .dropdown-content {
         display: none;
         width: 100%;
@@ -98,16 +98,16 @@ h1 {
         background-color: #f1f1f1;
         min-width: 160px;
         overflow: auto;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
-        
+
         &.dropdown-active {
           display: block;
         }
-  
+
         form {
           width: 100%;
-          
+
           .child-dropdown {
             @include displayFlex(flex-start);
             width: 100%;
@@ -133,7 +133,7 @@ h1 {
             flex-direction: column;
             display: none;
 
-            &.child-dropdown-content-active{
+            &.child-dropdown-content-active {
               display: block;
             }
 
@@ -145,7 +145,7 @@ h1 {
               border: none;
               cursor: pointer;
 
-              &:hover{
+              &:hover {
                 background: $darkGray;
                 color: $lightWhite;
               }
@@ -157,7 +157,12 @@ h1 {
   }
   .cards-wrapper {
     width: 65%;
-    @include grid(grid-template-columns, repeat(3, minmax(32%, 1fr)), 1.3rem, 1rem);
+    @include grid(
+      grid-template-columns,
+      repeat(3, minmax(32%, 1fr)),
+      1.3rem,
+      1rem
+    );
     .card {
       background-color: $lightWhite;
       border: 1px solid $cardsBorderColor;
@@ -191,5 +196,14 @@ h1 {
         }
       }
     }
+  }
+}
+
+.about-body {
+  .about-project {
+    width: 60%;
+    margin: 2rem auto;
+    font-size: 20px;
+    text-align: left;
   }
 }
