--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,11 +1,12 @@
 $primaryColor: #3571a3;
+$darkBlue: #3571a3;
 $whiteColor: #ffffff;
 $darkWhiteColor: #fbfbfb;
 $darkBlack: #000000;
 $lightBlack: #483e3e;
-$beige: #E5E0E0;
+$beige: #e5e0e0;
 $lightWhite: #fdfdff;
 $cardsBorderColor: #707070;
 $containerWidth: 85%;
-$lightGray: #B2B2B2;
+$lightGray: #b2b2b2;
 $darkGray: #929292;
