--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -19,7 +19,7 @@ header {
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background-image: linear-gradient(120deg, #fed142 30%, #3571a3 100%);
+      background-image: linear-gradient(120deg, #fed142 30%, $darkBlue 100%);
     }
     .nav-links {
       min-width: 40%;
@@ -36,7 +36,7 @@ header {
 
 h1 {
   width: 560px;
-  margin: 10rem auto 3rem auto;
+  margin: 8rem auto 3rem auto;
   text-align: center;
   font-size: 33px;
   font-weight: bold;
@@ -205,5 +205,68 @@ h1 {
     margin: 2rem auto;
     font-size: 20px;
     text-align: left;
+  }
+}
+
+.auth-container {
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    padding: 3rem 6rem;
+    width: 100%;
+    background-color: $whiteColor;
+    box-shadow: 0px 3px 6px #00000029;
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+      align-self: center;
+      margin-bottom: 1rem;
+    }
+    label {
+      color: #9191a0;
+      margin-bottom: 0;
+      font-size: 13px;
+    }
+    input {
+      border: 1px solid $cardsBorderColor;
+      border-radius: 4px;
+      padding: 1rem;
+    }
+    .restore-wrapper {
+      display: flex;
+      justify-content: space-between;
+      input {
+        margin-right: 0.5rem;
+        cursor: pointer;
+      }
+      label {
+        color: $darkBlack;
+      }
+    }
+    #enter {
+      background-color: $darkBlue;
+      color: $whiteColor;
+      font-size: 18px;
+      border: none;
+      border-radius: 9px;
+      box-shadow: 0px 3px 6px #00000029;
+      width: 43%;
+      margin: 0 auto;
+      padding: 0.8rem 1.8rem;
+      cursor: pointer;
+    }
+    #recovery,
+    #registration {
+      font-size: 13px;
+      color: $primaryColor;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
   }
 }
