--- a/css/global.css
+++ b/css/global.css
@@ -411,6 +411,8 @@ h1 {
   row-gap: 1rem;
   padding: 3rem 6rem;
   width: 100%;
+  height: 40%;
+  border-radius: 9px;
   background-color: #ffffff;
   box-shadow: 0px 3px 6px #00000029;
 }
@@ -441,11 +443,13 @@ h1 {
 
 .auth-container form .restore-wrapper input {
   margin-right: 0.5rem;
+  align-self: flex-start;
   cursor: pointer;
 }
 
 .auth-container form .restore-wrapper label {
   color: #000000;
+  align-self: flex-start;
 }
 
 .auth-container form #enter {
@@ -455,7 +459,7 @@ h1 {
   border: none;
   border-radius: 9px;
   box-shadow: 0px 3px 6px #00000029;
-  width: 43%;
+  width: auto;
   margin: 0 auto;
   padding: 0.8rem 1.8rem;
   cursor: pointer;
@@ -468,5 +472,9 @@ h1 {
   background: transparent;
   border: none;
   cursor: pointer;
+}
+
+.auth-container form #recovery {
+  align-self: flex-end;
 }
 /*# sourceMappingURL=global.css.map */
