--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -219,6 +219,8 @@ h1 {
     row-gap: 1rem;
     padding: 3rem 6rem;
     width: 100%;
+    height: 40%;
+    border-radius: 9px;
     background-color: $whiteColor;
     box-shadow: 0px 3px 6px #00000029;
     h3 {
@@ -242,10 +244,12 @@ h1 {
       justify-content: space-between;
       input {
         margin-right: 0.5rem;
+        align-self: flex-start;
         cursor: pointer;
       }
       label {
         color: $darkBlack;
+        align-self: flex-start;
       }
     }
     #enter {
@@ -255,7 +259,7 @@ h1 {
       border: none;
       border-radius: 9px;
       box-shadow: 0px 3px 6px #00000029;
-      width: 43%;
+      width: auto;
       margin: 0 auto;
       padding: 0.8rem 1.8rem;
       cursor: pointer;
@@ -267,6 +271,9 @@ h1 {
       background: transparent;
       border: none;
       cursor: pointer;
+    }
+    #recovery {
+      align-self: flex-end;
     }
   }
 }
