--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -279,5 +279,9 @@ h1 {
     #enter-send {
       margin-top: 3rem;
     }
+    #remember {
+      margin-right: 0.5rem;
+      cursor: pointer;
+    }
   }
 }
