--- a/css/global.css
+++ b/css/global.css
@@ -452,7 +452,7 @@ h1 {
   align-self: flex-start;
 }
 
-.auth-container form #enter,
+.auth-container form .enter,
 .auth-container form #enter-send {
   background-color: #3571a3;
   color: #ffffff;
@@ -466,8 +466,8 @@ h1 {
   cursor: pointer;
 }
 
-.auth-container form #recovery,
-.auth-container form #registration {
+.auth-container form .recovery,
+.auth-container form .registration {
   font-size: 13px;
   color: #3571a3;
   background: transparent;
@@ -486,5 +486,9 @@ h1 {
 .auth-container form #remember {
   margin-right: 0.5rem;
   cursor: pointer;
+}
+
+.auth-container .active {
+  display: flex;
 }
 /*# sourceMappingURL=global.css.map */
