--- a/css/global.css
+++ b/css/global.css
@@ -406,9 +406,9 @@ h1 {
 }
 
 .auth-container form {
-  display: flex;
+  display: none;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: 0.5rem;
   padding: 3rem 6rem;
   width: 100%;
   height: 40%;
@@ -434,6 +434,7 @@ h1 {
   border: 1px solid #707070;
   border-radius: 4px;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .auth-container form .restore-wrapper {
@@ -461,7 +462,7 @@ h1 {
   border-radius: 9px;
   box-shadow: 0px 3px 6px #00000029;
   width: auto;
-  margin: 0 auto;
+  margin: 1rem auto;
   padding: 0.8rem 1.8rem;
   cursor: pointer;
 }
@@ -488,7 +489,19 @@ h1 {
   cursor: pointer;
 }
 
+.auth-container form #agree-policies {
+  margin-right: 0.5rem;
+}
+
 .auth-container .active {
   display: flex;
+}
+
+.auth-container .auth-form {
+  display: flex;
+}
+
+.auth-container .auth-form.active {
+  display: none;
 }
 /*# sourceMappingURL=global.css.map */
