--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -214,9 +214,9 @@ h1 {
   display: flex;
   flex-direction: column;
   form {
-    display: flex;
+    display: none;
     flex-direction: column;
-    row-gap: 1rem;
+    row-gap: 0.5rem;
     padding: 3rem 6rem;
     width: 100%;
     height: 40%;
@@ -238,6 +238,7 @@ h1 {
       border: 1px solid $cardsBorderColor;
       border-radius: 4px;
       padding: 1rem;
+      margin-bottom: 1rem;
     }
     .restore-wrapper {
       display: flex;
@@ -261,7 +262,7 @@ h1 {
       border-radius: 9px;
       box-shadow: 0px 3px 6px #00000029;
       width: auto;
-      margin: 0 auto;
+      margin: 1rem auto;
       padding: 0.8rem 1.8rem;
       cursor: pointer;
     }
@@ -283,8 +284,17 @@ h1 {
       margin-right: 0.5rem;
       cursor: pointer;
     }
+    #agree-policies {
+      margin-right: 0.5rem;
+    }
   }
   .active {
     display: flex;
+  }
+  .auth-form {
+    display: flex;
+  }
+  .auth-form.active {
+    display: none;
   }
 }
