Add error and success elements and styles

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,3 +10,5 @@ $cardsBorderColor: #707070;
 $containerWidth: 85%;
 $lightGray: #b2b2b2;
 $darkGray: #929292;
+$errorMessage: #ff7474;
+$successMessage: #bdd36e;
