--- a/css/global.css
+++ b/css/global.css
@@ -399,7 +399,7 @@ h1 {
 }
 
 .auth-container {
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -409,7 +409,7 @@ h1 {
   display: none;
   flex-direction: column;
   row-gap: 0.5rem;
-  padding: 3rem 6rem;
+  padding: 3rem 2rem 3rem 5rem;
   width: 100%;
   height: 40%;
   border-radius: 9px;
@@ -421,7 +421,37 @@ h1 {
   font-size: 18px;
   font-weight: bold;
   align-self: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+.auth-container form .msg-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+}
+
+.auth-container form .msg-wrapper .email-msg {
+  background-color: #ff7474;
+  color: #ffffff;
+  padding: 0.3rem 0.5rem;
+  text-align: center;
+  font-size: 13px;
+  border-radius: 2px;
+  position: relative;
+  display: none;
+}
+
+.auth-container form .msg-wrapper .sb4:before {
+  content: '';
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #ff7474;
+  border-bottom: 10px solid transparent;
+  right: 15%;
+  bottom: -20px;
 }
 
 .auth-container form label {
@@ -435,20 +465,33 @@ h1 {
   border-radius: 4px;
   padding: 1rem;
   margin-bottom: 1rem;
+  width: 90%;
+  margin: 0 auto 1 auto;
+}
+
+.auth-container form .input.error {
+  border: 1px solid #ff7474;
+}
+
+.auth-container form .input.success {
+  border: 1px solid #bdd36e;
 }
 
 .auth-container form .restore-wrapper {
   display: flex;
   justify-content: space-between;
-}
-
-.auth-container form .restore-wrapper input {
-  margin-right: 0.5rem;
-  cursor: pointer;
+  width: 90%;
+  margin: 0 auto 1 auto;
 }
 
 .auth-container form .restore-wrapper label {
   color: #000000;
+}
+
+.auth-container form .restore-wrapper div {
+  display: flex;
+  width: 30%;
+  align-items: center;
 }
 
 .auth-container form .restore-wrapper div .remember {
@@ -456,6 +499,7 @@ h1 {
   font-size: 13px;
   cursor: pointer;
   margin-bottom: 0;
+  width: 20%;
 }
 
 .auth-container form .enter,
@@ -491,8 +535,17 @@ h1 {
   margin-top: 3rem;
 }
 
-.auth-container form #agree-policies {
+.auth-container form .agree-policies-wrapper {
+  display: flex;
+  width: 90%;
+  align-items: center;
+}
+
+.auth-container form .agree-policies-wrapper #agree-policies {
+  margin: 0;
   margin-right: 0.5rem;
+  padding: 0;
+  width: 2%;
 }
 
 .auth-container .active {
@@ -504,6 +557,22 @@ h1 {
 }
 
 .auth-container .auth-form.active {
+  display: none;
+}
+
+.auth-container .failure-icon {
+  color: #ff7474;
+  margin-left: 0.5rem;
+  opacity: 1;
+  display: inline-block;
+}
+
+.auth-container .success-icon {
+  color: #ffffff;
+  background-color: #bdd36e;
+  margin-left: 0.5rem;
+  border-radius: 100%;
+  opacity: 1;
   display: none;
 }
 /*# sourceMappingURL=global.css.map */
