--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -209,7 +209,7 @@ h1 {
 }
 
 .auth-container {
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -217,7 +217,7 @@ h1 {
     display: none;
     flex-direction: column;
     row-gap: 0.5rem;
-    padding: 3rem 6rem;
+    padding: 3rem 2rem 3rem 5rem;
     width: 100%;
     height: 40%;
     border-radius: 9px;
@@ -227,7 +227,35 @@ h1 {
       font-size: 18px;
       font-weight: bold;
       align-self: center;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
+    }
+    .msg-wrapper {
+      display: flex;
+      justify-content: space-between;
+      // width: 95%;
+      margin-bottom: 0;
+      .email-msg {
+        background-color: $errorMessage;
+        color: $whiteColor;
+        padding: 0.3rem 0.5rem;
+        text-align: center;
+        font-size: 13px;
+        border-radius: 2px;
+        position: relative;
+        display: none;
+      }
+      .sb4:before {
+        content: '';
+        width: 0px;
+        height: 0px;
+        position: absolute;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 10px solid $errorMessage;
+        border-bottom: 10px solid transparent;
+        right: 15%;
+        bottom: -20px;
+      }
     }
     label {
       color: #9191a0;
@@ -239,23 +267,33 @@ h1 {
       border-radius: 4px;
       padding: 1rem;
       margin-bottom: 1rem;
+      width: 90%;
+      margin: 0 auto 1 auto;
+    }
+    .input.error {
+      border: 1px solid $errorMessage;
+    }
+    .input.success {
+      border: 1px solid $successMessage;
     }
     .restore-wrapper {
       display: flex;
       justify-content: space-between;
-      input {
-        margin-right: 0.5rem;
-        cursor: pointer;
-      }
+      width: 90%;
+      margin: 0 auto 1 auto;
       label {
         color: $darkBlack;
       }
       div {
+        display: flex;
+        width: 30%;
+        align-items: center;
         .remember {
           margin-right: 0.5rem;
           font-size: 13px;
           cursor: pointer;
           margin-bottom: 0;
+          width: 20%;
         }
       }
     }
@@ -288,8 +326,16 @@ h1 {
     #enter-send {
       margin-top: 3rem;
     }
-    #agree-policies {
-      margin-right: 0.5rem;
+    .agree-policies-wrapper {
+      display: flex;
+      width: 90%;
+      align-items: center;
+      #agree-policies {
+        margin: 0;
+        margin-right: 0.5rem;
+        padding: 0;
+        width: 2%;
+      }
     }
   }
   .active {
@@ -299,6 +345,20 @@ h1 {
     display: flex;
   }
   .auth-form.active {
+    display: none;
+  }
+  .failure-icon {
+    color: $errorMessage;
+    margin-left: 0.5rem;
+    opacity: 1;
+    display: inline-block;
+  }
+  .success-icon {
+    color: $whiteColor;
+    background-color: $successMessage;
+    margin-left: 0.5rem;
+    border-radius: 100%;
+    opacity: 1;
     display: none;
   }
 }
