--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -394,11 +394,11 @@ h1 {
     .email-form.active {
       display: flex;
     }
-    .pass-form {
-      display: flex;
-    }
+    // .pass-form {
+    //   display: none;
+    // }
     .pass-form.active {
-      display: none;
+      display: flex;
     }
     .failure-icon {
       color: $errorMessage;
