--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -234,15 +234,17 @@ h1 {
         display: flex;
         justify-content: space-between;
         margin-bottom: 0;
+        width: 100%;
         .email-msg {
           background-color: $errorMessage;
           color: $whiteColor;
-          padding: 0.3rem 0.5rem;
+          padding: 0.3rem 0.1rem;
           text-align: center;
           font-size: 13px;
           border-radius: 2px;
           position: relative;
           display: none;
+          width: 40%;
         }
         .email-msg.error {
           display: block;
@@ -256,7 +258,7 @@ h1 {
           border-right: 10px solid transparent;
           border-top: 10px solid $errorMessage;
           border-bottom: 10px solid transparent;
-          right: 15%;
+          right: 12%;
           bottom: -20px;
         }
       }
@@ -394,9 +396,6 @@ h1 {
     .email-form.active {
       display: flex;
     }
-    // .pass-form {
-    //   display: none;
-    // }
     .pass-form.active {
       display: flex;
     }
@@ -405,6 +404,10 @@ h1 {
       margin-left: 0.5rem;
       opacity: 0;
       display: none;
+      position: absolute;
+      right: -32%;
+      bottom: 35px;
+      width: 40%;
     }
     .failure-icon.error {
       opacity: 1;
@@ -417,11 +420,19 @@ h1 {
       border-radius: 100%;
       opacity: 0;
       display: none;
+      position: absolute;
+      bottom: 35px;
     }
 
     .success-icon.success {
       opacity: 1;
       display: inline-block;
+    }
+
+    .input-icons {
+      display: flex;
+      position: relative;
+      width: 100%;
     }
   }
 
